This is just to motivate myself to improve a little bit every day :)

Best: 10

02-04-2024
Streak: 10
Learned:
Did:
    -Import image resources for main menu + buttons
    -Add background image to Main Menu - static for now

01-04-2024
Streak: 9
Learned:
Did:
    -Change default colours for light mode in theme

31-03-2024
Streak: 8
Learned:
Did:
    -Just get rid of some hardcoded strings

30-03-2024
Streak: 7
Learned:
Did:
    -Set up basic navigation from Main Menu to DayPart Menu, three buttons doing the same thing

29-03-2024
Streak: 6
Learned:
Did:
    -Start implementing Navigation Host
    -Add scaffolding (just files) for Main Menu screen, and reusable screen for Morning, Midday,
        Evening Menus called DayPart Menu
    -Set up minimal placeholder for MainMenu screen, mount it to main screen on start up
    -Add 'templateComponent' to organisation directory as a quick copy-paste blue print
        for future components

28-03-2024
Streak: 5
Learned:
    -Read about Navigation Host, Graph, Controller
Did:
    -Add over-engineered 'Calendar Fragment' for displaying current day, using MVVM pattern
    -Change project structure slightly: data layer shouldn't use '@Composable' annotation,
        presentation layer should only import from data layer in ViewModels.

27-03-2024
Streak: 4
Learned:
Did:
    -Messed about with trying to set up an example component that adheres to MVVM pattern, but
        couldn't get the ViewModel class to work - something about kotlin.AutoCloseable not being
        accessible.
    -Upgrade kotlin (and its stdlib) from 1.9.22 -> 1.9.23 to fix missing AutoCloseable

26-03-2024
Streak: 3
Learned:
Did:
    -Disable precompose as it stops iOS from building
    -Start Koin on both iOS and Android (can't be done from shared code)
    -Remove special character unsupported by custom font
    -Fix sloppy precompose dependency implementations, re-enable precompose